Made adjustments to the index.css for mobile screen sizes relating to the form container, switch and submit buttons, and the first and last list elements on dropdown menus. Also hid the scrollbar for the body to avoid its appearance/disappearance shifting element positions when body changes height/width during result and error message animations. Switch button has also had its text content changed to better represent its functionality

--- a/src/index.css
+++ b/src/index.css
@@ -17,6 +17,14 @@ body {
   -moz-osx-font-smoothing: grayscale;
   color: var(--palette-color-contrast);
   background-color: rgb(46, 46, 46);
+  /* Hide scrollbar for IE, Edge and Firefox */
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
 }
 
 code {
@@ -107,6 +115,7 @@ input {
 	z-index: 1;
 	background-color: transparent;
 	border-bottom: var(--bottom-border-standard);
+  border-radius: 0.5rem 0.5rem 0rem 0rem;
 	font: inherit;
 	font-size: 1.125rem;
 	padding: .25rem 0;
@@ -117,6 +126,7 @@ input {
 input:focus {
 	outline: 0;
 	border-bottom-color: var(--palette-color-accent);
+  background-color: #0b2022;
 }
 
 
@@ -212,8 +222,7 @@ input:focus {
 }
 
 .unitDropdownList li:first-child, .ingredientDropdown li:first-child {
-  /* Setting bottom cornors to negative value fixed thinner bottom border issue */
-  border-radius: 0.5rem 0.5rem -1rem -1rem;
+  border-radius: 0.5rem 0.5rem 0rem 0rem;
 }
 
 .unitItem:hover, .ingredientItem:hover {
@@ -233,6 +242,7 @@ input:focus {
   justify-content: center;
   background-color: #0b2022;
   animation: messageBackgroundAppear 200ms ease-in-out 0ms forwards;
+  overflow: hidden;
 }
 
 .msgSwitch {
@@ -275,6 +285,9 @@ input:focus {
 .errorAlert {
   text-align: center;
 }
+
+
+/* Animations */
 
 
 @keyframes fadeIn {
@@ -363,5 +376,47 @@ input:focus {
   }
   100% {
     padding-bottom: 1rem;
+  }
+}
+
+
+/* Media Queries */
+
+
+@media (pointer: coarse)  {
+	/* mobile device */
+
+  /* Turning off border radiuses for lists mobile, otherwise causes thinner bottom borders */
+  .unitDropdownList li:last-child,
+  .ingredientDropdown li:last-child,
+  .unitDropdownList li:first-child,
+  .ingredientDropdown li:first-child {
+    border-radius: 0;
+  }
+
+  /* Prevents switch and submit buttons being stuck on darker color after being pressed on mobile */
+  .switchButton:hover, .submitButton:hover {
+    background-color: var(--palette-color-accent);
+  }
+
+  /* Makes buttons briefly flash a darker red when clicked/pressed on mobile */
+  .switchButton:active, .submitButton:active {
+    background-color: #ac1231;
+  }
+}
+
+@media screen and (max-width: 448px) {
+
+  /* Sets form container to have width extend to end of screen rather than showing rounded corners */
+  .formContainer {
+    border-radius: 0;
+  }
+}
+
+@media screen and (max-width: 287px) {
+  
+  /* Sets text inside of switch button to stay on one line rather than multiple when on smaller screen sizes */
+  .switchButton {
+    padding: 0.5rem 0.6rem 0.5rem 0.6rem;
   }
 }
